--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "SDUI_framework_demo"
-include ':sdui-framework'
+rootProject.name = "sc_framework"
+include ':sc-framework'
