update module name

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
-GROUP=com.github.server-control
+GROUP=com.github.what-s-particle
 VERSION_NAME=0.0.2
 
 POM_INCEPTION_YEAR=2022
 POM_PACKAGING=jar
-POM_URL=https://github.com/server-control/sc-framework
+POM_URL=https://github.com/what-s-particle/particle-framework
 
 POM_ISSUE_SYSTEM=github
-POM_ISSUE_URL=https://github.com/server-control/sc-framework/issues
+POM_ISSUE_URL=https://github.com/what-s-particle/particle-framework/issues
 
-POM_SCM_URL=https://github.com/server-control/sc-framework
-POM_SCM_CONNECTION=scm:git:git://github.com/server-control/sc-framework
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/server-control/sc-framework
+POM_SCM_URL=https://github.com/what-s-particle/particle-framework
+POM_SCM_CONNECTION=scm:git:git://github.com/what-s-particle/particle-framework
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/what-s-particle/particle-framework
 
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
